# simple_api

./: .env.example  .gitignore  .ruff.toml  README.md  app.yaml  cerbos.dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_11_1841-bda05400543e_init.py  2024_12_12_0122-d43e1b8089ea_add_datetime_mixin.py  2024_12_12_0429-0732047758b1_remove_verify.py  2024_12_12_0558-5f16556e53a2_remove_unused_from_user.py
cerbos/: config.yaml
cerbos/policies/: record_policy.yaml  store_roles.yaml
cerbos/tests/: record_policy_test.yaml
sql/: init_test_data.sql
src/: database.py
src/app/api/: auth.py  ping.py  record.py  router.py  user.py
src/app/crud/: record.py  user.py
src/app/model/: __init__.py  record.py  role.py  user.py  user_role.py
src/app/schema/: ping.py  record.py  role.py  token.py  user.py
src/app/service/: auth.py  auth_service.py  record.py
src/common/: model.py  pagination.py  permission.py  security.py  settings.py
src/core/: conf.py  registrar.py
src/utils/: health_check.py  logs.py  openapi.py  password.py  telegram.py  user.py
tests/: conftest.py  types.py  utils.py
tests/api/: test_access.py  test_ping.py
