[project]
name = "simple_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Romaniv1912", email = "romaniv1912@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.6.1",
    "ruff>=0.8.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "loguru>=0.7.3",
    "asgi-correlation-id>=4.3.4",
    "SQLAlchemy>=2.0.36",
    "fastapi-users[sqlalchemy]>=14.0.0",
    "alembic>=1.14.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
